# blackglass

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  compose.yml  config.container.toml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: mcp_smoke.py
skills/blackglass-retrieve/: GUIDE.md  PLAYBOOK.md
src/blackglass/: __init__.py  __main__.py  app.py  artifacts.py  config.py  main.py  mcp_server.py  policy.py  retrieval.py  routes.py  schemas.py
tests/: test_config.py  test_mcp_server.py  test_openapi.py  test_policy.py  test_retrieval.py  test_routes.py  test_schemas.py
