[project]
name = "blackglass"
version = "0.1.0"
description = "Policy-aware web retrieval and rendering service for agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mcp>=1.27.1",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]
retrieval = [
    "scrapling[fetchers]>=0.3.2",
]
browser = [
    "cloakbrowser>=0.3.0",
    "playwright>=1.45.0",
]

[project.scripts]
blackglass = "blackglass.main:main"
blackglass-mcp = "blackglass.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackglass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that require Docker or external services",
]

[tool.coverage.run]
branch = true
source = ["src/blackglass"]
omit = [
    "src/blackglass/__main__.py",
    "src/blackglass/main.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.:",
]
